# ShoppingList_functional

./: main.py  pyproject.toml  test.py  test2.py
